# anime_up_updater

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
anime_up_updater/: script.py
anime_up_updater/config/: constants.py
anime_up_updater/functions/: filter.py  scraper.py  times.py
anime_up_updater/models/: anime.py
anime_up_updater/res/: airing_anime_list_05-12_5_2024.json  airing_anime_list_31-07_4_2024.json  anime_example.json  scrape_page_example.html
anime_up_updater/utils/: logger.py
