[tool.poetry]
name = "anime-up-updater"
version = "0.1.0"
description = "Simple script to scrap info about the airing anime"
authors = ["Enrico Cecchetti <ienricocecchetti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Add your dependencies here
requests = "^2.31.0"
ptvsd = "^4.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
script = "anime_up_updater.script:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry-dynamic-versioning"]
version-file = "version.txt"
